--- a/app/views/tasklists/index.html.erb
+++ b/app/views/tasklists/index.html.erb
@@ -5,6 +5,7 @@
     <li>
       <%= link_to tasklist.id,tasklist  %>
       :
+      <%= tasklist.status %>&gt; 
       <%= tasklist.content %>
       </li>
   <% end %>
